Changed several menu item titles

--- a/econvenor/templates/app_base.html
+++ b/econvenor/templates/app_base.html
@@ -172,9 +172,9 @@
                 <li><a href={% url 'task-list' %}>
                   <i class="fa fa-check-square-o fa-fw"></i>&nbsp;
                   {% ifequal menu.child 'all_tasks' %}
-                    <strong>All tasks</strong></a>
+                    <strong>Manage tasks</strong></a>
                   {% else %}
-                    All tasks</a>
+                    Manage tasks</a>
                   {% endifequal %}
                 </li>
               </ul>
@@ -194,9 +194,9 @@
                 <li><a href={% url 'decision-list' %}>
                   <i class="fa fa-th fa-fw"></i>&nbsp;
                   {% ifequal menu.child 'all_decisions' %}
-                    <strong>All decisions</strong></a>
+                    <strong>View all decisions</strong></a>
                   {% else %}
-                    All decisions</a>
+                    View all decisions</a>
                   {% endifequal %}
                 </li>
               </ul>
@@ -225,9 +225,9 @@
                 <li><a href={% url 'participant-list' %}>
                   <i class="fa fa-pencil fa-fw"></i>&nbsp;
                   {% ifequal menu.child 'all_participants' %}
-                    <strong>All participants</strong></a>
+                    <strong>Manage participants</strong></a>
                   {% else %}
-                    All participants</a>
+                    Manage participants</a>
                   {% endifequal %}
                 </li>
               </ul>
