--- a/participants/templates/participant_edit.html
+++ b/participants/templates/participant_edit.html
@@ -28,8 +28,8 @@
     </a>
   </form>
 
-  <button class="btn btn-default delete-button" data-toggle="modal" 
-    data-target=".modal" name="Participant: {{ form.first_name.value }}"
+  <button class="btn btn-default delete-button"
+    name="Participant: {{ form.first_name.value }}"
     id="delete_participant">
       Delete participant
   </button>
