--- a/econvenor/templates/app_base.html
+++ b/econvenor/templates/app_base.html
@@ -260,7 +260,7 @@
       </div><!-- /.row -->
         
 
-      <div class="modal fade" tabindex="-1" role="dialog" 
+      <div class="modal fade" id="delete_modal" tabindex="-1" role="dialog" 
            aria-labelledby="DeleteConfirmation" aria-hidden="true" 
            aria-describedby="A pop-up to confirm deletion">
         <div class="modal-dialog modal-sm">
