--- a/dashboard/templates/dashboard.html
+++ b/dashboard/templates/dashboard.html
@@ -7,25 +7,32 @@
   <h1>{{ group.name }}</h1>
 </div>
 
-<div class="col-sm-4">
+<div class="col-md-4">
   <div class="panel panel-primary">
     <div class="panel-heading">
       Time since last meeting<br/>
     </div>
     <div class="panel-body">
-      <span class="feature-text">
-       {{ days_since_last_meeting }} days<br/><br/>
-      </span>
+      {% if days_since_last_meeting %}
+        <span class="feature-text">
+         {{ days_since_last_meeting }} days<br/><br/>
+        </span>
+      {% else %}
+        <br/><br/>
+        <p>This box will be empty until eConvenor has more data.</p>
+        <br/><br/>
+      {% endif %}    
     </div>
   </div>  
 </div>
 
-<div class="col-sm-4">
+<div class="col-md-4">
   <div class="panel panel-primary">
     <div class="panel-heading">
 	  Last meeting
     </div>
     <div class="panel-body">
+      {% if last_meeting %}
         Number: {{ last_meeting.meeting_no }}<br/>
         Date: {{ last_meeting.date_scheduled }}<br/>
         Type: {{ last_meeting.meeting_type }}<br/>
@@ -34,6 +41,11 @@
         {% else %}
           Minutes: Not yet sent out<br/>
         {% endif %}
+      {% else %}
+        <br/>
+        <p>The box will be empty until eConvenor has more data.<p/>
+        <br/>
+      {% endif%}
     </div>
     <a href={% url 'meeting-list-current' %}>
       <button type="button" class="btn btn-default">
@@ -43,12 +55,13 @@
   </div>  
 </div>
 
-<div class="col-sm-4">
+<div class="col-md-4">
   <div class="panel panel-primary">
     <div class="panel-heading">
 	  Next meeting
     </div>
     <div class="panel-body">
+      {% if next_meeting %}
         Number: {{ next_meeting.meeting_no }}<br/>
         Date: {{ next_meeting.date_scheduled }}<br/>
         Type: {{ next_meeting.meeting_type }}<br/>
@@ -57,6 +70,9 @@
         {% else %}
           Agenda: Not yet sent out<br/>
         {% endif %}
+      {% else %}
+        <p>The box will be empty until eConvenor has more data.<p/>
+      {% endif%}
     </div>
     <a href={% url 'meeting-list-current' %}>
       <button type="button" class="btn btn-default">
@@ -66,11 +82,12 @@
   </div>  
 </div>  
 
-<div class="col-sm-6">
+<div class="col-md-6">
   <div class="panel panel-primary">
     <div class="panel-heading">
 	  Most overdue tasks
     </div>
+    {% if top_overdue_tasks %}
     <table class="table table-hover">
       <thead>
         <tr>
@@ -89,6 +106,11 @@
         {% endfor%}
       </tbody>
     </table>
+    {% else %}
+      <div class="panel-body">
+        <p>There are no overdue tasks at the moment. Good going!<p/>
+      </div>
+    {% endif%}    
     <a href={% url 'task-list' %}>
       <button type="button" class="btn btn-default">
         Go to tasks
@@ -97,11 +119,12 @@
   </div>  
 </div>
 
-<div class="col-sm-6">
+<div class="col-md-6">
   <div class="panel panel-primary">
     <div class="panel-heading">
 	  Tasks due soon
     </div>
+    {% if top_pending_tasks %}
     <table class="table table-hover">
       <thead>
         <tr>
@@ -120,6 +143,12 @@
         {% endfor%}
       </tbody>
     </table>
+    {% else %}
+      <div class="panel-body">
+        <p>There are no tasks due soon. Click 
+          the button below to create some!<p/>
+      </div>
+    {% endif%}
     <a href={% url 'task-list' %}>
       <button type="button" class="btn btn-default">
         Go to tasks
@@ -128,7 +157,7 @@
   </div>  
 </div>
 
-<div class="col-sm-6">
+<div class="col-md-6">
   <div class="panel panel-primary">
     <div class="panel-heading">
 	  eConvenor feature updates
