--- a/econvenor/commonstatic/css/econvenor.css
+++ b/econvenor/commonstatic/css/econvenor.css
@@ -1,9 +1,5 @@
-/*
- * Fonts
- *
- * Specify fonts.
- */
-
+/* FONTS
+-------------------------------------------------- */
 
 @font-face {
     font-family: 'Body';
@@ -15,7 +11,6 @@
     font-weight: normal;
     font-style: normal;
 }
-
 
 @font-face {
     font-family: 'Heading';
@@ -29,59 +24,66 @@
 }
 
 
-/*
- * Page body
- *
- * Add padding beneath navbar and adjust background colour.
- */
+/* BODY
+-------------------------------------------------- */
 
 body {
   font-family: 'Body', Helvetica, Arial, sans-serif;
-  padding-top: 50px;
+  padding-top: 40px;
   background-image: url('/static/images/texture.png');
 }
 
 
-/*
- * Main navigation
- *
- * Adjust colours.
-*/
+/* NAVIGATION - GENERAL
+-------------------------------------------------- */
 
 .nav {
-  text-shadow: 0 -1px 0 rgba(0,0,0,.15);
+  text-shadow: 0 0 0;
   background-color: #333333;
   border-color: #333333;
-  box-shadow: 0 0 0 rgba(255,255,255,.1);
 }
+
+
+/* NAVIGATION - NAVBAR
+-------------------------------------------------- */
+
 .nav .navbar-collapse {
   border-color: #333333;
 }
+
 .nav .navbar-brand {
-  color: #dddddd;
+  color: #cccccc;
 }
-.nav .navbar-nav > li > a {
-  color: #dddddd;
-}
-.nav .navbar-nav > li > a:hover {
-  color: #dddddd;
-}
-.nav .navbar-nav > .active > a,
-.nav .navbar-nav > .active > a:hover {
-  color: #dddddd;
-  background-color: #333333;
-}
+
 .nav .navbar-toggle {
   border-color: #333333;
 }
+
 .nav .navbar-toggle:hover {
-  background-color: #333333;
-  border-color: #333333;
+  border-color: #cccccc;
 }
 
-.nav > li > a:hover,
-.nav > li > a:focus {
-  text-decoration: none;
+.nav .navbar-nav > li > a {
+  color: #cccccc;
+}
+
+.nav .navbar-nav > li > a:hover,
+.nav .navbar-nav > li > a:focus {
+  background-color: #333333;
+  color: #ffffff;
+}
+
+.nav .navbar-nav .open > a,
+.nav .navbar-nav .open > a:hover,
+.nav .navbar-nav .open > a:focus {
+  color: #ffffff;
+  background-color: #ff0066;
+  border-color: #ff0066;
+}
+
+.nav .navbar-nav > .active > a,
+.nav .navbar-nav > .active > a:hover {
+  color: #ffffff;
   background-color: #ff0066;
 }
 
@@ -109,7 +111,29 @@ body {
   }
 }
 
+
+/*
+ * Toolbar
+ */
+ 
+.toolbar {
+  position: fixed; 
+  top: 90px;
+  right: 50px;
+}
+
+
 /* Sidebar navigation */
+
+
+
+.nav-sidebar > li > a:hover,
+.nav-sidebar > li > a:focus {
+  text-decoration: none;
+  background-color: #ff0066;
+}
+
+
 .nav-sidebar {
   margin-right: -21px;
   margin-bottom: 20px;
@@ -411,13 +435,3 @@ tbody tr:hover {
   margin-top: 0;
 }
 
-
-/*
- * Toolbar
- */
- 
-.toolbar {
-  position: fixed; 
-  top: 50px;
-  right: 50px;
-}
