--- a/econvenor/templates/app_base.html
+++ b/econvenor/templates/app_base.html
@@ -24,7 +24,7 @@
 
   <body>
 
-    <div class="nav navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <div class="nav navbar navbar-fixed-top" role="navigation">
 
       <div class="container-fluid">
 
@@ -36,14 +36,19 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href={% url 'dashboard' %}>eConvener</a>
-
+          <a class="navbar-brand" href={% url 'dashboard' %}>
+            eConvener
+          </a>
         </div><!-- /.navbar-header -->
 
         <div class="collapse navbar-collapse">
 
           <ul class="nav navbar-nav navbar-right">
-            <li class="dropdown">
+            {% ifequal menu.parent 'feedback' %}
+              <li class="dropdown active">
+            {% else %}
+              <li class="dropdown">
+            {% endifequal %}
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                 <i class="fa fa-flag fa-fw fa-lg"></i>&nbsp;
                 Feedback <b class="caret"></b>
@@ -64,7 +69,11 @@
                   View all feature/change requests</a></li>
               </ul>
             </li>
-            <li class="dropdown">
+            {% ifequal menu.parent 'help' %}
+              <li class="dropdown active">
+            {% else %}
+              <li class="dropdown">
+            {% endifequal %}
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                 <i class="fa fa-info-circle fa-fw fa-lg"></i>&nbsp;
                 Help <b class="caret"></b></a>
@@ -77,19 +86,26 @@
                   <i class="fa fa-list-alt fa-fw"></i>&nbsp;                  
                   FAQs</a></li>
                 <li><a href={% url 'ask-question' %}>
-                  <i class="fa fa-question-circle fa-fw"></i>&nbsp;                  
+                  <i class="fa fa-question-circle fa-fw"></i>&nbsp;
                   Ask a question</a></li>
               </ul>
             </li>
-            <li class="dropdown">
+            {% ifequal menu.parent 'account' %}
+              <li class="dropdown active">
+            {% else %}
+              <li class="dropdown">
+            {% endifequal %}
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                 <i class="fa fa-user fa-fw fa-lg"></i>&nbsp;
                 Hi, {{ user }} <b class="caret"></b></a>
               <ul class="dropdown-menu">
-
-                <li><a href={% url 'account' %}><i class="fa fa-gear fa-fw"></i> Account settings</a></li>
+                <li><a href={% url 'account' %}>
+                  <i class="fa fa-gear fa-fw"></i>
+                    Account settings</a></li>
                 <li class="divider"></li>
-                <li><a href={% url 'logout' %}><i class="fa fa-sign-out fa-fw"></i> Logout</a></li>
+                <li><a href={% url 'logout' %}>
+                  <i class="fa fa-sign-out fa-fw"></i>
+                    Logout</a></li>
               </ul>
             </li>
           </ul>
