--- a/econvenor/commonstatic/css/econvenor.css
+++ b/econvenor/commonstatic/css/econvenor.css
@@ -52,7 +52,7 @@ body {
 }
 
 .nav .navbar-brand {
-  color: #cccccc;
+  color: #bbbbbb;
 }
 
 .nav .navbar-toggle {
@@ -60,11 +60,11 @@ body {
 }
 
 .nav .navbar-toggle:hover {
-  border-color: #cccccc;
+  border-color: #bbbbbb;
 }
 
 .nav .navbar-nav > li > a {
-  color: #cccccc;
+  color: #bbbbbb;
 }
 
 .nav .navbar-nav > li > a:hover,
@@ -87,12 +87,11 @@ body {
   background-color: #ff0066;
 }
 
-
-/*
- * Sidebar
- */
+/* NAVIGATION - SIDEBAR
+-------------------------------------------------- */
 
 /* Hide for mobile */
+
 .sidebar {
   display: none;
 }
@@ -111,28 +110,7 @@ body {
   }
 }
 
-
-/*
- * Toolbar
- */
- 
-.toolbar {
-  position: fixed; 
-  top: 90px;
-  right: 50px;
-}
-
-
-/* Sidebar navigation */
-
-
-
-.nav-sidebar > li > a:hover,
-.nav-sidebar > li > a:focus {
-  text-decoration: none;
-  background-color: #ff0066;
-}
-
+/* Parent level */
 
 .nav-sidebar {
   margin-right: -21px;
@@ -140,59 +118,128 @@ body {
   margin-left: -20px;
 }
 
-.nav-sidebar :hover {
-  background-color: #ffffff;
+.nav-sidebar a {
+  color: #bbbbbb;
 }
 
 .nav-sidebar > li > a {
   padding-right: 20px;
   padding-left: 20px;
 }
+
+.nav-sidebar > li > a:hover,
+.nav-sidebar > li > a:focus {
+  text-decoration: none;
+  color: #ffffff;
+  background-color: #ff0066;
+}
+
 .nav-sidebar > .active > a {
   color: #ffffff;
   background-color: #ff0066;
 }
 
-.nav-second-level > li {
+/* Child level */
+
+.nav-sidebar .nav-second-level li {
   text-decoration: none;
   background-color: #555555;
 }
 
-.nav-second-level > li > a:hover,
-.nav-second-level > li > a:focus {
+.nav-sidebar .nav-second-level li a {
+    padding-left: 37px;
+}
+
+.nav-sidebar .nav-second-level li a:hover,
+.nav-sidebar .nav-second-level li a:focus {
   text-decoration: none;
   background-color: #444444;
   color: #ffffff; 
 }
 
-
-.nav-second-level .active > a {
+.nav-sidebar .nav-second-level .active a {
   color: #ffffff;
   background-color: #444444;
 }
 
-.nav-sidebar a {
+
+/* NAVIGATION - TOOLBAR
+-------------------------------------------------- */
+
+.toolbar {
+    position: fixed;
+    top: 90px;
+    right: 40px;
+    z-index: 1000;
+    display: block;
+    overflow-x: hidden;
+    overflow-y: auto;
+  }
+
+.nav-toolbar {
+  margin: 0px -20px 0px -20px;
+  background-color: #555555;
+}
+
+.nav-toolbar .toolbar-heading {
+  background-color: #ff0066;
+  padding: 13px 20px 12px 20px;
+}
+
+.nav-toolbar h1,
+.nav-toolbar h2  {
+  color: #ffffff;
+  margin: 0 0 0 0;
+  font-size: 1em;
+}
+
+.nav-toolbar .toolbar-subheading {
+  background-color: #333333;
+  padding: 13px 20px 12px 20px;
+}
+
+.nav-toolbar a {
   color: #bbbbbb;
 }
 
-.nav-second-level li a {
-    padding-left: 37px;
+.nav-toolbar > li > a {
+  padding-right: 20px;
+  padding-left: 37px;
+}
+
+.nav-toolbar > li > a:hover,
+.nav-toolbar > li > a:focus {
+  text-decoration: none;
+  color: #ffffff;
+  background-color: #444444;
+}
+
+.btn-toolbar {
+  display: block;
+  width: 100%;
+  text-align: left;
+  border: 0px;
+  padding: 10px 25px 10px 42px;
+  color: #bbbbbb;
+  background-color: #555555;
+}
+
+.btn-toolbar:hover,
+.btn-toolbar:focus {
+  color: #ffffff;
+  background-color: #ff0066;
 }
 
 
-
-/*
- * Button - primary
- *
- * Adjust colours.
-*/
+/* BUTTONS
+-------------------------------------------------- */
 
 .btn {
   border-radius: 0px;
 }
 
 .btn-primary {
-  color: #cccccc;
+  color: #ffffff;
   background-color: #ff0066; 
   border-color: #ff0066;
 }
@@ -202,9 +249,9 @@ body {
 .btn-primary:active,
 .btn-primary.active,
 .open .dropdown-toggle.btn-primary {
-  color: #ffffff;
-  background-color: #dd0044;
-  border-color: #dd0044;
+  color: #bbbbbb;
+  background-color: #ff0066;
+  border-color: #ff0066;
 }
 
 .btn-primary.disabled,
