Improved the look of the agenda edit view

--- a/docs/templates/agenda_edit_ajax_sidebar.html
+++ b/docs/templates/agenda_edit_ajax_sidebar.html
@@ -4,12 +4,13 @@
   {% for item in items %}
     <li id="sidebar_{{ item.item_no}}">
       <a href="#id_i{{ item.item_no}}-title" class="sidebar-heading tltip"
-         data-toggle="tooltip" title="Scroll to this item">
+         data-toggle="tooltip" title="Drag items to re-order">
         <div>
-          <i class="fa fa-arrows-v fa-fw"></i>&nbsp;
+          <i class="fa fa-file-text-o fa-fw"></i>&nbsp;
           Item&nbsp;{{ item.item_no}}.&nbsp;&nbsp;
             <span id="sidebar_heading_{{ item.item_no}}">
               {{ item.title }}
+                        <i class="fa fa-arrows-v pull-right"></i>&nbsp;
             </span>
         </div>
       </a>
