--- a/docs/templates/agenda_edit.html
+++ b/docs/templates/agenda_edit.html
@@ -18,71 +18,94 @@
       </div>
 
       
-    <!-- TASKS TABLE
+    <!-- TASKS TABLES
     ================================================== -->
 
-      <div class="panel panel-primary" id="tasks">
-
+      <div class="panel panel-primary">
         <div class="panel-heading">
-          Attachment 1.  Tasks
+          Attachment 1. &nbsp;&nbsp; Tasks overdue
         </div>
+	    <table class="table">
+		  <thead>
+		    <tr>
+			  {% for heading in task_list_headings %}
+			    <th>{{ heading }}</th>
+              {% endfor%}
+	        </tr>
+		  </thead>
+		  <tbody id="tasks"> 
+	        {% for task in overdue_tasks_list %}
+			  <tr>
+			    <td>{{ task.description }}</td>
+                <td>{{ task.participant }}</td>
+				<td>{{ task.deadline }}</td>
+			  </tr>
+			{% empty %}
+			  <tr>
+			    <td>None</td>
+			  </tr>
+	        {% endfor%}
+          </tbody>
+		</table>
+	  </div><!-- /.panel -->
 
-        <div class="panel-body">  
-          
-          <h2><small>Tasks outstanding</small></h2>
-          <div class="panel panel-primary">
-		    <table class="table">
-		      <thead>
-		        <tr>
-			      {% for heading in task_list_headings %}
-			        <th>{{ heading }}</th>
-                  {% endfor%}
-			    </tr>
-		      </thead>
-		      <tbody> 
-			    {% for task in incomplete_tasks_list %}
-			      <tr>
-			 	    <td>{{ task.description }}</td>
-                    <td>{{ task.participant }}</td>
-				    <td>{{ task.deadline }}</td>
-			      </tr>
-			    {% empty %}
-			      <tr>
-			        <td>None</td>
-			      </tr>
-			    {% endfor%}
-		      </tbody>
-		    </table>
-	      </div><!-- /.panel -->
+      <div class="panel panel-primary">
+        <div class="panel-heading">
+          Attachment 2. &nbsp;&nbsp; Tasks outstanding
+        </div>
+	    <table class="table">
+		  <thead>
+		    <tr>
+			  {% for heading in task_list_headings %}
+			    <th>{{ heading }}</th>
+              {% endfor%}
+	        </tr>
+		  </thead>
+		  <tbody> 
+	        {% for task in pending_tasks_list %}
+			  <tr>
+			    <td>{{ task.description }}</td>
+                <td>{{ task.participant }}</td>
+				<td>{{ task.deadline }}</td>
+			  </tr>
+			{% empty %}
+			  <tr>
+			    <td>None</td>
+			  </tr>
+	        {% endfor%}
+          </tbody>
+		</table>
+	  </div><!-- /.panel -->
 
-	      <h2><small>Tasks completed since last meeting</small></h2>
-	      <div class="panel panel-primary">
-		    <table class="table">
-			  <thead>
-			    <tr>
-				  {% for heading in task_list_headings %}
-				    <th>{{ heading }}</th>
-				  {% endfor%}
-			    </tr>
-			  </thead>
-			  <tbody> 
-			    {% for task in completed_tasks_list %}
-				  <tr>
-				    <td>{{ task.description }}</td>
-				    <td>{{ task.participant }}</td>
-			        <td>{{ task.deadline }}</td>
-				  </tr>
-			    {% empty %}
-			      <tr>
-				    <td>None</td>
-				  </tr>
-			    {% endfor%}
-			  </tbody>
-		    </table>
-  	      </div><!-- /.panel -->
-  	      
-	    </div><!-- /.outer panel-body -->
-	  </div><!-- /.outer panel-primary -->
+      <div class="panel panel-primary">
+        <div class="panel-heading">
+          Attachment 3. &nbsp;&nbsp; Tasks completed since last meeting
+        </div>
+	    <table class="table table-hover">
+		  <thead>
+		    <tr>
+			  {% for heading in task_list_headings %}
+			    <th>{{ heading }}</th>
+              {% endfor%}
+	        </tr>
+		  </thead>
+		  <tbody> 
+	        {% for task in completed_tasks_list %}
+			  <tr>
+			    <td>{{ task.description }}</td>
+                <td>{{ task.participant }}</td>
+				<td>{{ task.deadline }}</td>
+			  </tr>
+			{% empty %}
+			  <tr>
+			    <td>None</td>
+			  </tr>
+	        {% endfor%}
+          </tbody>
+		</table>
+	  </div><!-- /.panel -->
+
+
       
       <div class="bottom-spacer">
       </div>
@@ -105,8 +128,7 @@
             Navigation toolbar</h2>
         </li>
         <li>
-          <a href="#meeting_details" class="tltip" data-toggle="tooltip"
-            data-placement="top" title="Scroll to meeting details">
+          <a href="#meeting_details" class="sidebar-heading tltip">
               <i class="fa fa-align-justify fa-fw"></i>&nbsp;
               Meeting details
           </a>
@@ -118,10 +140,9 @@
              
       <ul class="nav nav-toolbar">
         <li>
-          <a href="#tasks" class="tltip" data-toggle="tooltip" 
-            data-placement="top" title="Scroll to tasks">
-              <i class="fa fa-align-justify fa-fw"></i>&nbsp;
-              Attachment 1. Tasks
+          <a href="#tasks" class="sidebar-heading">
+              <i class="fa fa-paperclip fa-fw"></i>&nbsp;
+              Attachments
           </a>
         </li>
        <li class="toolbar-subheading">
@@ -142,7 +163,7 @@
           <button type="button" class="btn btn-toolbar ajax-button" 
             id="add_item">
               <i class="fa fa-plus-circle fa-fw"></i>&nbsp;
-              Add agenda item
+              Add an item
           </button>
         </li>
         <li>
@@ -150,7 +171,7 @@
             goto="{% url 'agenda-distribute' meeting_id %}" 
             id="submit_agenda">
               <i class="fa fa-share-square-o fa-fw"></i>&nbsp;
-              Preview and send agenda
+              Preview and send
           </button>
         </li>
       </ul>
