--- a/docs/templates/agenda_edit_ajax_items.html
+++ b/docs/templates/agenda_edit_ajax_items.html
@@ -3,42 +3,55 @@
 <form id="editagendaform" class="savebyjs" action="" method="POST">
 {% csrf_token %}
 
-
 <div class="panel panel-primary" id="meeting_details">
   <div class="panel-heading">
     Meeting details
   </div>
   <div class="panel-body">
-    {{ meeting_form.errors }}
-    {{ meeting_form.as_p }}
-  </div>
+    <div class="col-md-6">
+    {% for field in meeting_form %}
+      <div class="form-group">
+        {{field.label_tag}}
+        {{ field }}
+      </div>
+    {% endfor %}
+    </div>
+  </div>    
 </div>
-
 
 {% for item in item_formlist %}
 
   <div class="panel panel-primary">
     
     <div class="panel-heading">
-      {{ item.item_no.value }}
-      {{ item.title|setclass:"form-control item-title" }}
-      {{ item.title.errors }}
+      Item {{ item.item_no.value }}
     </div>
-
+    
     <div class="panel-body">
-      {{ item.time_limit.label_tag }}
-      {{ item.time_limit|setclass:"spinner" }}		
+      <div class="form-group">
+        {{ item.title.label_tag }}
+        {{ item.title|setclass:"form-control item-title" }}
         {{ item.time_limit.errors }}
-      {{ item.explainer.label_tag }}
-      {{ item.explainer|setclass:"form-control" }}
+      </div>
+      <div class="form-group">
+        {{ item.time_limit.label_tag }}<br/>
+        {{ item.time_limit|setclass:"form-control field-short" }}		
+        {{ item.time_limit.errors }}
+      </div>
+      <div class="form-group">
+        {{ item.explainer.label_tag }}
+        {{ item.explainer|setclass:"form-control field-short" }}
         {{ item.explainer.errors }}
-      {{ item.background.label_tag }}
-      {{ item.background|setclass:"form-control" }}
+      </div>
+      <div class="form-group">
+        {{ item.background.label_tag }}
+        {{ item.background|setclass:"form-control" }}
         {{ item.background.errors }}
+     </div>
       <button type="button" title="Delete item" 
-        class="btn btn-default btn-xs ajax-button tltip"
-        id="delete_item_{{ item.item_no.value}}" data-toggle="tooltip" >
-        <span class="glyphicon glyphicon-remove">Delete</span>
+        class="btn btn-default btn-sm ajax-button"
+        id="delete_item_{{ item.item_no.value}}">
+        <i class="fa fa-times fa-fw"></i>&nbsp; Delete this item
       </button>
     </div>
     
@@ -77,6 +90,7 @@
           required: true,
           timeCheck: true,
         },
+        location_scheduled: "required",
         meeting_status: "required",
         {% for item in item_formlist %}
           "{{ item.prefix }}-title": "required",
@@ -98,9 +112,10 @@
         start_time_scheduled: {
           required: "Please select the meeting's start time",        
         },
+        location_scheduled: "Please enter the location of the meeting",
         meeting_status: "Please select the current status of the meeting",
         {% for item in item_formlist %}
-          "{{ item.prefix }}-title": "Please enter a title for this agenda item",
+          "{{ item.prefix }}-title": "Please enter a title for this item",
           "{{ item.prefix }}-time_limit": {
             digits: "Please enter a number between 0 and 600",
             range: "Please enter a number between 0 and 600",
