--- a/econvenor/commonstatic/css/econvenor.css
+++ b/econvenor/commonstatic/css/econvenor.css
@@ -386,7 +386,7 @@ tbody tr:hover {
 }
 
 .bottom-spacer {
-  height: 200px;
+  height: 500px;
 }
 
 
@@ -395,7 +395,8 @@ tbody tr:hover {
 
 .form-control {
   height: 30px;
-  border: 1px solid #555555;
+  background-color: #cccccc;
+  border: 1px solid #999999;
   border-radius: 0px;
 }
 
@@ -406,6 +407,13 @@ tbody tr:hover {
           box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(255, 0, 102, .4);
 }
 
+.field-short {
+    width: 33%;
+}
+
+.field-medium {
+    width: 50%;
+}
 
 /* MAIN WINDOW
 -------------------------------------------------- */
